--- a/20220901.md
+++ b/20220901.md
@@ -28,11 +28,11 @@ Browser: Chrome、Firefox、Safari
 
 ##### Step1:After a code audit, it was found that /xxx has unauthorized access and arbitrary file uploads.
 
-![image-20220901144733006](.\image\20220901\image-20220901144733006.png)
+![image-20220901144733006](./image/20220901/image-20220901144733006.png)
 
 ##### Step2:Build EXP according to the code audit results, and run it to get the URL address of WebShell: http://localhost:8081/upload/blog/20220901/1662015136678.jsp
 
-![image-20220901145545937](.\image\20220901\image-20220901145545937.png)
+![image-20220901145545937](./image/20220901/image-20220901145545937.png)
 
 ###### EXP:
 
@@ -98,9 +98,9 @@ print("Web_Shell_Encryptor:{Encryptor}".format(Encryptor="JAVA_AES_BASE64"))
 
 ##### Step3:Connect to the Trojan via http://localhost:8081/upload/blog/20220901/1662015136678.jsp.
 
-![image-20220901145821537](.\image\20220901\image-20220901145821537.png)
+![image-20220901145821537](./image/20220901/image-20220901145821537.png)
 
-![image-20220901150013755](.\image\20220901\image-20220901150013755.png)
+![image-20220901150013755](./image/20220901/image-20220901150013755.png)
 
 #### [Attack Type]
 
@@ -146,19 +146,19 @@ Browser: Chrome、Firefox、Safari
 
 ##### Step1:Registered account, username: text123, password: 123456.
 
-![image-20220901151056903](.\image\20220901\image-20220901151056903.png)
+![image-20220901151056903](./image/20220901/image-20220901151056903.png)
 
 ##### Step2:Log in to the account you just registered and click "File Management".
 
-![image-20220901151310085](.\image\20220901\image-20220901151310085.png)
+![image-20220901151310085](./image/20220901/image-20220901151310085.png)
 
-![image-20220901151450938](.\image\20220901\image-20220901151450938.png)
+![image-20220901151450938](./image/20220901/image-20220901151450938.png)
 
 ##### Step3:Click File Upload, select the Trojan file that has been built in advance, and click Upload.
 
-![image-20220901151725905](.\image\20220901\image-20220901151725905.png)
+![image-20220901151725905](./image/20220901/image-20220901151725905.png)
 
-![image-20220901151844500](.\image\20220901\image-20220901151844500.png)
+![image-20220901151844500](./image/20220901/image-20220901151844500.png)
 
 ###### Data Pack
 
@@ -191,15 +191,15 @@ Content-Type: application/octet-stream
 
 ##### Step4:In /file, click text.jsp to get the URL address of WebShell: http://localhost:8081/upload/file/text.jsp.
 
-![image-20220901152330084](.\image\20220901\image-20220901152330084.png)
+![image-20220901152330084](./image/20220901/image-20220901152330084.png)
 
-![image-20220901152647804](.\image\20220901\image-20220901152647804.png)
+![image-20220901152647804](./image/20220901/image-20220901152647804.png)
 
 ##### Step5:Connect to the Trojan via http://localhost:8081/upload/file/text.jsp.
 
-![image-20220901153236077](.\image\20220901\image-20220901153236077.png)
+![image-20220901153236077](./image/20220901/image-20220901153236077.png)
 
-![image-20220901153318713](.\image\20220901\image-20220901153318713.png)
+![image-20220901153318713](./image/20220901/image-20220901153318713.png)
 
 #### [Attack Type]
 
@@ -245,17 +245,17 @@ Browser: Chrome、Firefox、Safari
 
 ##### Step1:Registered account, username: text123, password: 123456.
 
-![image-20220901151056903](.\image\20220901\image-20220901151056903.png)
+![image-20220901151056903](./image/20220901/image-20220901151056903.png)
 
 ##### Step2:Log in to the account you just registered and click "File Management".
 
-![image-20220901151310085](.\image\20220901\image-20220901151310085.png)
+![image-20220901151310085](./image/20220901/image-20220901151310085.png)
 
 ##### Step3:Click any article on the homepage and enter malicious Javascript code in the comment area.
 
-![image-20220901153618078](.\image\20220901\image-20220901153618078.png)
+![image-20220901153618078](./image/20220901/image-20220901153618078.png)
 
-![image-20220901153902249](.\image\20220901\image-20220901153902249.png)
+![image-20220901153902249](./image/20220901/image-20220901153902249.png)
 
 ###### Data Pack:
 
@@ -283,7 +283,7 @@ contentId=65&commentText=%3Cscript%3Ealert%28%22123%22%29%3C%2Fscript%3E
 
 ##### Step4:Visit the article again to trigger a stored XSS attack.
 
-![image-20220901154108104](.\image\20220901\image-20220901154108104.png)
+![image-20220901154108104](./image/20220901/image-20220901154108104.png)
 
 #### [Attack Type]
 
@@ -329,15 +329,15 @@ Browser: Chrome、Firefox、Safari
 
 ##### Step1:After a code audit, it was found that /adminGetUserList had unauthorized access and exported sensitive user information, such as account names and passwords.
 
-![image-20220901154837873](.\image\20220901\image-20220901154837873.png)
+![image-20220901154837873](./image/20220901/image-20220901154837873.png)
 
 ##### Step2:注册账号，用户名:text123，密码:123456。
 
-![image-20220901151056903](.\image\20220901\image-20220901151056903.png)
+![image-20220901151056903](./image/20220901/image-20220901151056903.png)
 
 ##### Step3:Log in to the account you just registered and access /adminGetUserList to obtain sensitive information such as password.
 
-![image-20220901154610187](.\image\20220901\image-20220901154610187.png)
+![image-20220901154610187](./image/20220901/image-20220901154610187.png)
 
 #### [Attack Type]
 
